# SiriusStreamDemo

./: CMakeLists.txt  README.md  demo_constants.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  viewerdialog.cpp  viewerdialog.h  viewerdialog.ui
audio/: IVideoViewer.h  audioadapter.h  iaudioprocessor.h  media.h  portaudiocapture.cpp  portaudiocapture.h  portaudioplayer.cpp  portaudioplayer.h
backend/: backend.cpp  backend.h  colorconverter.cpp  colorconverter.h  h264decoder.cpp  h264decoder.h  ivideoencoder.h  speexadapter.cpp  speexadapter.h  x264videoencoder.cpp  x264videoencoder.h
conan/: conanfile_android.txt  conanfile_ios.txt  conanfile_linux.txt  conanfile_osx.txt  conanfile_windows.txt
dialog/: chatdialog.cpp  chatdialog.h  chatdialog.ui  inputdialog.cpp  inputdialog.h  inputdialog.ui  streamerdialog.cpp  streamerdialog.h  streamerdialog.ui  viewerdialog.cpp  viewerdialog.h  viewerdialog.ui
worker/: audiocaptureworker.cpp  audiocaptureworker.h  streamerworker.cpp  streamerworker.h  videocaptureworker.cpp  videocaptureworker.h  videoviewermanager.cpp  videoviewermanager.h  viewerworker.cpp  viewerworker.h
